# student_manager

./: .gitignore  CMakeLists.txt
include/: process.h  student.h
src/: main.cpp  process.cpp
